<resources>
    <string name="app_name">SnapMemo</string>
    <string name="designer_ad">Sensation Design.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_start">截图确认</string>
    <string name="title_activity_content">备忘录内容确认</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="topic">主题</string>
    <string name="time">时间</string>

    <string name="start_generate">生成</string>

    <string name="content_content">内容</string>
    <string name="title_activity_user_settings">用户设置</string>

    <string name="undefine">undefine</string>

    <string name="user_settings_title">用户设置</string>

    <string name="default_user_name">userName=Alan</string>
    <string name="default_education_info">educationInfo=Nanjing University</string>
    <string name="default_signature">signature=take a SNAP and everything gets easier</string>
    <string name="default_user_id">userID=000000</string>

    <string name="progress_dialog_title">微软牛津计划</string>

    <string name="sign_up">注册</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="user_id">用户ID</string>
    <string name="education_info">学校</string>
    <string name="signiture">签名档</string>

    <string name="internet_failure">网络错误</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">帐号 User Name</string>
    <string name="prompt_password">密码 Password</string>
    <string name="action_sign_in">登录 Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">帐号格式不正确</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">这里要填</string>
    <string name="title_activity_signin">用户登录</string>

    <string name="modify_success">修改成功</string>
    <string name="delete_success">删除成功</string>
    <string name="signin_overtime">登录失效，请重新登录</string>
    <string name="sign_out">注销</string>
    <string name="title_activity_sign_up">注册</string>
    <string name="sign_up_success">注册成功</string>

    <string name="start_info">确认生成备忘录吗？</string>
    <string name="reminder_fail">未添加提醒</string>

    <string name="app_recommend_1">Take a Snap</string>
    <string name="app_recommend_2">And everything gets easier</string>
    <string name="app_recommend_3">开启SnapMemo便捷之旅</string>

    <string name="todo">待开发者开发...</string>

</resources>
