<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.sensation.snapmemo.activity.SigninActivity">


    <AutoCompleteTextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/prompt_user_name"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="73dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dominColor"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignEnd="@+id/password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/deputyColor"
        android:textSize="40sp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/designer_ad"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:text="@string/title_activity_login"
        android:textColor="@color/deputyColor"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
