<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.sensation.snapmemo.activity.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="198dp"
        android:text="@string/user_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_below="@+id/inputUserName"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_alignStart="@+id/inputPassword" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:inputType="textPassword"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputPassword"
        android:layout_marginTop="67dp"
        android:background="@color/dominColor"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_recommend_1"
        android:textSize="22sp"
        android:layout_marginTop="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_recommend_2"
        android:textSize="22sp"
        android:layout_below="@+id/recommend"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_recommend_3"
        android:textSize="28sp"
        android:textColor="@color/deputyColor"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
