<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.sensation.snapmemo.activity.UserSettingsActivity"
    tools:showIn="@layout/activity_user_settings">

    <ImageView
        android:id="@+id/userLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userNameText"
        android:layout_below="@+id/userNameText"
        android:background="@null"
        android:paddingLeft="10dp"
        android:text="@string/undefine"
        android:textColor="@color/textColor"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/educationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/educationInfoText"
        android:layout_toEndOf="@+id/userLogo"
        android:background="@null"
        android:paddingLeft="10dp"
        android:text="@string/undefine"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/conditionBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/conditionText"
        android:layout_marginBottom="130dp"
        android:alpha="0.4"
        android:background="@color/deputyColorLight" />

    <EditText
        android:id="@+id/signiture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/conditionBackground"
        android:layout_alignTop="@+id/conditionBackground"
        android:background="@null"
        android:padding="12dp"
        android:text="@string/undefine"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/userLogo"
        android:layout_toEndOf="@+id/userLogo"
        android:text="@string/user_name"
        android:textColor="@color/deputyColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/userIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/userNameText"
        android:layout_below="@+id/userName"
        android:text="@string/user_id"
        android:textColor="@color/deputyColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/userID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIDText"
        android:layout_toEndOf="@+id/userLogo"
        android:background="@null"
        android:paddingLeft="10dp"
        android:text="@string/undefine"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/educationInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userID"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/userLogo"
        android:text="@string/education_info"
        android:textColor="@color/deputyColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/conditionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userLogo"
        android:layout_marginTop="10dp"
        android:text="@string/signiture"
        android:textColor="@color/deputyColor"
        android:textSize="18sp" />

</RelativeLayout>
